<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/kote" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:layout_marginVertical="8dp"
        android:hint="@string/name_hint"
        app:counterEnabled="true"
        app:counterMaxLength="40"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        app:boxBackgroundColor="@color/violet"
        android:hint="@string/phone_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/textInputLayoutPhone"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutPhone"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextStyle"
        android:text="@string/sex_text"/>

    <RadioGroup
        android:id="@+id/radioGroupSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/tvSex"
        app:layout_constraintTop_toBottomOf="@id/tvSex">

        <RadioButton
            android:id="@+id/radioMan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex_radio_man"/>
        <RadioButton
            android:id="@+id/radioWoman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex_radio_woman"/>
    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notificationSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radioGroupSex"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:checked="true"
        android:text="@string/switch_text"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkAuthorisation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:checked="true"
        android:text="@string/check_authorisation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notificationSwitch" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkNewProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/checkAuthorisation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:text="@string/check_new"/>

    <TextView
        android:id="@+id/tvScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/checkNewProducts"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextStyle"
        android:text="@string/tv_scores_text"/>

    <TextView
        android:id="@+id/tvScoresPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tvScores"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:textAppearance="@style/TextStyle"
        android:text="@string/tv_scores_default"/>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/linearProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvScores"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginHorizontal="@dimen/horizontal_margin"/>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cornerRadius="5dp"
        android:layout_marginHorizontal="@dimen/horizontal_margin"
        android:enabled="false"
        android:text="@string/btn_save_text"/>


</androidx.constraintlayout.widget.ConstraintLayout>